--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "coach",
+  "name": "index",
   "version": "1.0.0",
   "description": "Escuchador de Eventos",
-  "main": "coach.js",
+  "main": "index.js",
   "scripts": {
-    "test": "node coach.js",
-    "start": "node coach.js"
+    "test": "./node_modules/.bin/mocha ./test/test.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,10 @@
   },
   "homepage": "https://github.com/CrisTovilla/NodeCS#readme",
   "dependencies": {
-    "express": "^4.16.4",
-    "socket.io": "^2.2.0",
-    "http": "0.0.0",
-    "net": "^1.0.2",
-    "os": "^0.1.1",
-    "pg": "^7.4.1"
+    "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "mocha": "1.20.1",
+    "supertest": "0.13.0"
   }
 }
