--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Escuchador de Eventos",
   "main": "index.js",
   "scripts": {
-    "test": "npm install && call /node_modules/.bin/mocha /test/test.js",
+    "test": "npm install && call node_modules/.bin/mocha /test/test.js",
     "start": "node index.js"
   },
   "repository": {
